<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signfrd"
    android:padding="16dp"
    tools:context=".LogSig.SignupActivity">

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signupEmail" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@+id/signupUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signupPassword" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signupButton" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginRedirect" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notLogin"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
